# Rustify

./: Cargo.toml  README.md
src/: main.rs
src/web/: index-2.html  index-2.js  index.css  index.html  index.js
src/web/dep/: preact.js
