[package]
name = "rustify"
version = "0.1.0"
authors = ["Justin Wash <justin.wash@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-view = "0.4.1"
serde = "1.0.98"
serde_derive = "1.0.98"
serde_json = "1.0"
tokio-core = "0.1"

[dependencies.librespot]
git = "https://github.com/librespot-org/librespot.git"